# ChessEngine

./: CMakeLists.txt  README.md
Source/: Bitboard.h  Bitboard.inl  Board.cpp  Board.h  Board.inl  Engine.cpp  Engine.h  Enums.h  Eval.cpp  Eval.h  Format.cpp  Format.h  Log.h  Main.cpp  Move.cpp  Move.h  Moves.h  Moves.inl  Square.h  Square.inl  Uci.cpp  Uci.h
Source/Engine/: Bitboard.cpp  Bitboard.h  Bitboard.inl  Board.cpp  Board.h  Board.inl  Engine.cpp  Engine.h  Eval.cpp  Eval.h  Format.cpp  Format.h  Log.cpp  Log.h  Move.cpp  Move.h  RankAndFile.h  Square.cpp  Square.h  Square.inl
Source/UCI/: Uci.cpp  Uci.h
Tests/: TestBitboard.cpp  TestBoard.cpp  TestEngine.cpp  TestEval.cpp  TestMove.cpp  TestMoves.cpp
